// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderLineItemRow/> render() should render with applied discount 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://admin.shopify.com/store/storegorgias3/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <small
          class="d-block text-muted"
        >
          <del>
            <span>
              $1.00
            </span>
          </del>
        </small>
        <div>
          <button
            class="button btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $0.50
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <span
      class="numberInput wrapper group horizontal"
    >
      <input
        class="input"
        max="Infinity"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <span
        class="controls group vertical"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small top"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </span>
        </button>
        <button
          aria-disabled="true"
          class="wrapper button wrapper small fill secondary small bottom isDisabled"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </span>
        </button>
      </span>
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.50
        </span>
      </strong>
      <button
        aria-disabled="false"
        class="wrapper wrapper ghost ghost destructive medium"
        tabindex="0"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            close
          </i>
        </span>
      </button>
    </div>
  </td>
</tr>
`;

exports[`<OrderLineItemRow/> render() should render with product image 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://admin.shopify.com/store/storegorgias3/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="button btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <span
      class="numberInput wrapper group horizontal"
    >
      <input
        class="input"
        max="Infinity"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <span
        class="controls group vertical"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small top"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </span>
        </button>
        <button
          aria-disabled="true"
          class="wrapper button wrapper small fill secondary small bottom isDisabled"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </span>
        </button>
      </span>
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $1.00
        </span>
      </strong>
      <button
        aria-disabled="false"
        class="wrapper wrapper ghost ghost destructive medium"
        tabindex="0"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            close
          </i>
        </span>
      </button>
    </div>
  </td>
</tr>
`;

exports[`<OrderLineItemRow/> render() should render with product stock quantity 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://admin.shopify.com/store/storegorgias3/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="success"
    >
      99
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="button btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <span
      class="numberInput wrapper group horizontal"
    >
      <input
        class="input"
        max="Infinity"
        min="1"
        step="1"
        type="number"
        value="0"
      />
      <span
        class="controls group vertical"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small top"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </span>
        </button>
        <button
          aria-disabled="true"
          class="wrapper button wrapper small fill secondary small bottom isDisabled"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </span>
        </button>
      </span>
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<OrderLineItemRow/> render() should render without product image 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt=""
        class="img"
        src="test-file-stub"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://admin.shopify.com/store/storegorgias3/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="button btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <span
      class="numberInput wrapper group horizontal"
    >
      <input
        class="input"
        max="Infinity"
        min="1"
        step="1"
        type="number"
        value="1"
      />
      <span
        class="controls group vertical"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small top"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </span>
        </button>
        <button
          aria-disabled="true"
          class="wrapper button wrapper small fill secondary small bottom isDisabled"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </span>
        </button>
      </span>
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $1.00
        </span>
      </strong>
      <button
        aria-disabled="false"
        class="wrapper wrapper ghost ghost destructive medium"
        tabindex="0"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="material-icons icon"
          >
            close
          </i>
        </span>
      </button>
    </div>
  </td>
</tr>
`;

exports[`<OrderLineItemRow/> render() should render without product stock quantity because the inventory is not tracked 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://admin.shopify.com/store/storegorgias3/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="button btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <span
      class="numberInput wrapper group horizontal"
    >
      <input
        class="input"
        max="Infinity"
        min="1"
        step="1"
        type="number"
        value="0"
      />
      <span
        class="controls group vertical"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small top"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </span>
        </button>
        <button
          aria-disabled="true"
          class="wrapper button wrapper small fill secondary small bottom isDisabled"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </span>
        </button>
      </span>
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;

exports[`<OrderLineItemRow/> render() should render without quantity and without price 1`] = `
<tr>
  <td
    class="container"
  >
    <div
      class="imgContainer"
    >
      <img
        alt="Alt"
        class="img"
      />
    </div>
    <div
      class="legend"
    >
      <div>
        <a
          class="title"
          href="https://admin.shopify.com/store/storegorgias3/products/8345093387/variants/31128766316567"
          rel="noopener noreferrer"
          target="_blank"
        >
          Acidulous candy
        </a>
      </div>
      <div
        class="subtitle"
      >
        Red / A
      </div>
      <div
        class="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    class="numberCol"
  >
    <span
      class="text-muted"
    >
      N/A
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-inline-block text-center"
      >
        <div>
          <button
            class="button btn btn-link"
            id="applied-discount-line-item"
            tabindex="0"
            type="button"
          >
            <strong>
              <span>
                $1.00
              </span>
            </strong>
          </button>
        </div>
      </div>
      <span
        class="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    class="quantityCol"
  >
    <span
      class="numberInput wrapper group horizontal"
    >
      <input
        class="input"
        max="Infinity"
        min="1"
        step="1"
        type="number"
        value="0"
      />
      <span
        class="controls group vertical"
      >
        <button
          aria-disabled="false"
          class="wrapper button wrapper small fill secondary small top"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_up
            </i>
          </span>
        </button>
        <button
          aria-disabled="true"
          class="wrapper button wrapper small fill secondary small bottom isDisabled"
          type="button"
        >
          <span
            class="content"
          >
            <i
              class="material-icons icon"
            >
              arrow_drop_down
            </i>
          </span>
        </button>
      </span>
    </span>
  </td>
  <td
    class="numberCol"
  >
    <div
      class="d-flex"
    >
      <strong
        class="mt-auto mb-auto mr-auto"
      >
        <span>
          $0.00
        </span>
      </strong>
    </div>
  </td>
</tr>
`;
